# dbt-ai-readiness

./: README.md  pyproject.toml
.claude/: settings.local.json
src/dbt_ai_readiness/: __init__.py  cli.py  dbt_project.py
src/dbt_ai_readiness/autopilot/: __init__.py  doc_generator.py  runner.py  test_recommender.py
src/dbt_ai_readiness/mcp_server/: __init__.py  auto_enable.py  config.py
src/dbt_ai_readiness/readiness_score/: __init__.py  insights.py  scorer.py
src/dbt_ai_readiness/readiness_score/dimensions/: __init__.py  documentation.py  mcp.py  semantic.py  testing.py
tests/: test_dbt_project.py  test_insights.py  test_mcp_server.py  test_readiness_score.py
tests/fixtures/: dbt_project.yml  manifest_full.json
